--- a/dropbox/dropbox/react_server/src/index.css
+++ b/dropbox/dropbox/react_server/src/index.css
@@ -3,3 +3,4 @@ body {
   padding: 0;
   font-family: sans-serif;
 }
+@import url(http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css);
