--- a/Lab-1/Lab 1 /dropbox/dropbox/react_server/src/App.css
+++ b/Lab-1/Lab 1 /dropbox/dropbox/react_server/src/App.css
@@ -145,3 +145,20 @@
     padding-left:50px;
     transition: padding-left 0.5s;
 }
+
+.box__dragndrop,
+.box__uploading,
+.box__success,
+.box__error {
+    display: none;
+}
+
+
+.box.has-advanced-upload {
+    background-color: white;
+    outline: 2px dashed black;
+    outline-offset: -10px;
+}
+.box.has-advanced-upload .box__dragndrop {
+    display: inline;
+}
