--- a/Lab-1/Lab 1 /dropbox/dropbox/react_server/src/App.css
+++ b/Lab-1/Lab 1 /dropbox/dropbox/react_server/src/App.css
@@ -56,7 +56,7 @@
     position:absolute;
     height:100%;
     width:200px;
-    color:#fff;
+
     transition: margin-left 0.5s;
 }
 
@@ -76,7 +76,7 @@
 
 .side-bar ul li.menu-head a
 {
-    color:#fff;
+
     text-decoration:none;
     height:50px;
 }
@@ -84,34 +84,30 @@
 
 .side-bar ul .menu-head  a
 {
-    color:#fff;
+
     text-decoration:none;
     height:50px;
 }
 
 .side-bar ul .menu li  a 
 {
-    color:#fff;
+
     text-decoration:none;
     display:inline-table;
     width:100%;
-    padding-left:20px;
-    padding-right:20px;
-    padding-top:10px;
-    padding-bottom:10px;
+    padding: 10px 20px;
 }
 
 .side-bar ul .menu li  a:hover
 {
-    border-left:3px solid #ECECEA;    
+
     padding-left:17px;
 }
 
 .side-bar ul .menu li  a.active
 {
     padding-left:17px;
-    background:#D9853B;
-    border-left:3px solid #ECECEA;
+
 }
 
 .side-bar ul .menu li  a.active:before {
@@ -119,9 +115,7 @@
    position: absolute;
    width: 0;
    height: 0;
-   border-top: 20px solid transparent;
-    border-bottom: 20px solid transparent;
-  
+
   border-left: 7px solid #D9853B;
     margin-top: -10px;
     margin-left: 180px;
@@ -146,19 +140,56 @@
     transition: padding-left 0.5s;
 }
 
-.box__dragndrop,
-.box__uploading,
-.box__success,
-.box__error {
-    display: none;
+
+/*!
+ * Start Bootstrap - Simple Sidebar (https://startbootstrap.com/template-overviews/simple-sidebar)
+ * Copyright 2013-2017 Start Bootstrap
+ * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap-simple-sidebar/blob/master/LICENSE)
+ */
+
+body {
+    overflow-x: hidden;
 }
 
 
-.box.has-advanced-upload {
-    background-color: white;
-    outline: 2px dashed black;
-    outline-offset: -10px;
+
+
+
+
+/* Sidebar Styles */
+
+.sidebar-nav {
+    position: absolute;
+    top: 0;
+    width: 250px;
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    text-indent: 20px;
+    line-height: 40px;
+
 }
-.box.has-advanced-upload .box__dragndrop {
-    display: inline;
+
+.sidebar-nav li {
+    text-indent: 0px;
+    line-height: 40px;
 }
+
+
+.sidebar-nav li a:hover {
+    text-decoration: none;
+}
+
+.sidebar-nav li a:active, .sidebar-nav li a:focus {
+    text-decoration: none;
+
+}
+
+
+
+
+
+
+
+
+
